Finished off the article view as well as the comment, approve comments, and unapprove comments portions. Updated the CSS for approved and unapproved comment styles.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,13 @@
 body{
 	margin: 0px;
 }
+.approved{
+	padding: 5px;
+}
+.unapproved{
+	background: #fcc;
+	padding: 5px;
+}
 .small{
 	font-size: small;
 }
